--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
 	height: 100%
 }
 .bgimg {
-    background-image: url("https://www.cs.csub.edu/~arojas/cmps4910/images/food2.jpg");
+    background-image: url("");
     min-height: 100%;
     /*width: 150px;
     height: 100px;
