--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ body, h1 {
 body, html {
 	height: 100%
 }
+#wrapper{
+	width: 80%;
+	/*height: auto;*/
+
+}
+
+/* older work */
 .bgimg {
     background-image: url("");
     min-height: 100%;
