--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body, html {
 	height: 100%
 }
 #wrapper{
-	width: 80%;
-	align-content: center;
+	max-width: 80%;
+	margin: 0 auto;
 	/*height: auto;*/
 
 }
