--- a/style.css
+++ b/style.css
@@ -36,6 +36,12 @@ body, html {
 	margin: 0;
 	list-style: none;
 }
+img.circle {
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	position: relative;
+}
 img.center {
 	display: block;
 	margin: 0 auto;
