--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 
 body, h1 {
-	font-family: "Raleway", sans-serif
+	font-family: "Raleway", sans-serif;
 }
 body, html {
-	height: 100%
+	height: 100%;
+	font-family: "Quicksand", Arial, sans-serif;
+}
+p#nav {
+ 	font-family: "Quicksand", Arial, sans-serif;
 }
 #wrapper{
 	max-width: 80%;
