--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body, html {
 	height: 100%;
 	font-family: "Quicksand", Arial, sans-serif;
 }
+h2#name {
+	font-family: "Playfair Display", Georgia, serif;
+	font-size: 22px;
+	font-weight: 700;
+	margin-bottom: .5em;
+}
 p#nav {
  	font-family: "Quicksand", Arial, sans-serif;
 }
