--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h2#name {
 }
 p#nav {
  	font-family: "Quicksand", Arial, sans-serif;
+	line-height: 1.8;
 }
 #wrapper{
 	max-width: 80%;
@@ -45,6 +46,9 @@ p#nav {
 	padding: 0;
 	margin: 0;
 	list-style: none;
+}
+ul#nav {
+	list-style-type: none;
 }
 img.circle {
 	background-size: cover;
