--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@ p#nav {
 }
 ul#nav {
 	list-style-type: none;
+ 	font-size: 12px;
+	font-weight: 500;
+	/*text-transform: uppercase;*/
+	letter-spacing: 1px;
+	text-align: center;
 }
 img.circle {
 	background-size: cover;
