--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 
 body, h1 {
 	font-family: "Raleway", sans-serif;
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 1.8;
 }
 body, html {
 	height: 100%;
@@ -54,6 +57,7 @@ ul#nav {
 	/*text-transform: uppercase;*/
 	letter-spacing: 1px;
 	text-align: center;
+	line-height: 2.5;
 }
 img.circle {
 	background-size: cover;
