--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body, h1 {
 	font-family: "Raleway", sans-serif;
 	font-weight: 400;
-	font-size: 15px;
+	/*font-size: 15px;*/
 	line-height: 1.8;
 }
 body, html {
@@ -23,7 +23,22 @@ p#nav {
 	max-width: 80%;
 	margin: 0 auto;
 	/*height: auto;*/
-
+}
+ul#nav {
+	list-style-type: none;
+ 	font-size: 12px;
+	font-weight: 500;
+	/*text-transform: uppercase;*/
+	letter-spacing: 1px;
+	text-align: center;
+	line-height: 2.5;
+	padding-right: 25px;
+}
+img.circle {
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	position: relative;
 }
 
 /* older work */
@@ -50,21 +65,7 @@ p#nav {
 	margin: 0;
 	list-style: none;
 }
-ul#nav {
-	list-style-type: none;
- 	font-size: 12px;
-	font-weight: 500;
-	/*text-transform: uppercase;*/
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 2.5;
-}
-img.circle {
-	background-size: cover;
-	background-position: center center;
-	background-repeat: no-repeat;
-	position: relative;
-}
+
 img.center {
 	display: block;
 	margin: 0 auto;
