--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ h2#name {
 	font-weight: 700;
 	margin-bottom: .5em;
 }
+h2#about{
+
+}
+h3#about {
+
+}
 p#nav {
  	font-family: "Quicksand", Arial, sans-serif;
 	line-height: 1.8;
