--- a/style.css
+++ b/style.css
@@ -21,10 +21,13 @@ h2#name {
 	margin-bottom: .5em;
 }
 h2#about{
-
+	text-shadow: 0px 3px 3px gray;
 }
 h3#about {
-
+	text-shadow: 0px 3px 3px gray;
+}
+p#desc {
+	text-shadow: 0px 3px 3px #a2a2a2;
 }
 p#nav {
  	font-family: "Quicksand", Arial, sans-serif;
