--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ h2#name {
 	font-weight: 700;
 	margin-bottom: .5em;
 }
-#heading,#about{
+.heading, .about{
 	text-shadow: 0px 3px 3px gray;
 }
-p#desc {
+p.desc {
 	text-shadow: 0px 3px 3px #b6b6b6;
 }
 p#nav {
