--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ img.circle {
 	background-repeat: no-repeat;
 	position: relative;
 }
+div.col-sm-9 div {
+	height: 250px;
+	font-size: 28px;
+}
 
 /* older work */
 .bgimg {
